# http3-demo-esp32

./: .gitignore  CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults
main/: CMakeLists.txt  http3_manager.cc  http3_manager.h  idf_component.yml  main.cc  quic_test.cc  quic_test.h  system_info.cc  system_info.h  uart_eth_modem.cc  uart_eth_modem.h  uart_uhci.cc  uart_uhci.h
main/pmic/: axp2101.cc  axp2101.h  pmic.cc  pmic.h
main/uart_eth_modem/: WORKING_PRINCIPLE.md  uart_eth_modem.cc  uart_eth_modem.h  uart_uhci.cc  uart_uhci.h
